Coder/NodePort.yml
apiVersion: v1
kind: Service
metadata:  
  name: coder-nodeport
  namespace: coder
spec:
  selector:    
    app.kubernetes.io/name: coder
  type: NodePort
  ports:  
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30000
